# dioxycomp-docs

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
.dioxus/web/: .rustc_info.json
docs/: 404.html  index.html  serve.json  tailwind.css  tailwind_input.css
docs/assets/: dioxycomp-docs-dxh36c2d15684c63a4.js  dioxycomp-docs-dxh39517f37cdb8b8c.js  dioxycomp-docs-dxh546804b876eec8.js  dioxycomp-docs-dxh5f1783b03c61a680.js  dioxycomp-docs-dxhcfdf20796c8095ea.js  dioxycomp-docs_bg-dxh1ea7541a928327c.wasm  dioxycomp-docs_bg-dxh33976c46f84dcbe1.wasm  dioxycomp-docs_bg-dxh6763bea86bd6cbfe.wasm  dioxycomp-docs_bg-dxh7a25943f072179d.wasm  dioxycomp-docs_bg-dxhf0d8561db27dae77.wasm  styles-dxh1a8d2eca57224c55.css  tailwind-dxh944126f6f56c43ff.css  tailwind-dxhdab122640fec9ed.css
docs/assets/css/: styles.css  tailwind.css
docs/assets/dioxus/: DioxycompDocs.js  DioxycompDocs_bg.wasm  TailwindDioxus.js  TailwindDioxus_bg.wasm
docs/headless/Checkbox/: index.html
docs/headless/ad/: index.html
docs/headless/installHook.js.map/: index.html
docs/public/: index.html
docs/public/headless/Button/: index.html
docs/public/headless/asd/: index.html
docs/public/wasm/: dioxycomp-docs.js
docs/wasm/: dioxycomp-docs.js
public/: tailwind_input.css
public/assets/css/: styles.css  tailwind.css
public/css/: tailwind.css
src/: app.rs  main.rs
src/app/components/: Header.rs  Main.rs  Nav.rs
src/pages/headless/: HeadlessPage.rs  components.rs
src/pages/headless/components/: Badge.rs  ButtonPage.rs  (+4 more)
src/pages/home/: HomePage.rs
src/router/: PageLoader.rs  PageRouter.rs
(+4 files in other folders)
