[package]
name = "dioxycomp-docs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus-web = { version = "0.5.1", features = ["hydrate"], optional = true }
dioxus = { version = "0.5.1"}
dioxus-fullstack = { version = "0.5.2" }
dioxus-router = { version="0.5.0", features = ["fullstack"]}
tokio = { version="1.37.0", features = ["full"], optional = true }
serde = "1.0.202"
dioxycomp-headless = { version = "0.1.0", path = "../dioxycomp-ui/dioxycomp-headless"} 

[features]
default = []
server = ["tokio", "dioxus-fullstack/server", "dioxus-router/ssr" ]
web = ["dioxus-web", "dioxus/router"]