[package]
name = "dioxycomp-docs"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", default-features = true, features = ["router", "launch"] }
serde = "1.0.228"
dioxycomp-headless = { version = "0.1.0", path = "../dioxycomp-ui/dioxycomp-headless"} 
fs_extra = "1.3.0"
log = "0.4.17"
wasm-logger = "0.2.0"

[features]
default = []
web = ["dioxus/web"]